--- a/app/views/manufacturers/new.html.erb
+++ b/app/views/manufacturers/new.html.erb
@@ -1,9 +1,9 @@
 <%= form_for @manufacturer do |f| %>
   <%= f.label :name %>
-  <%= f.string :name %>
+  <%= f.text_field :name %>
 
   <%= f.label :country %>
-  <%= f.string :country %>
+  <%= f.text_field :country %>
 
   <%= f.submit %>
 <% end %>
