--- a/app/views/manufacturers/new.html.erb
+++ b/app/views/manufacturers/new.html.erb
@@ -1,9 +1,9 @@
 <%= form_for @manufacturer do |f| %>
   <%= f.label :name %>
-  <%= f.text_field :name %>
+  <%= f.text_field :name %></br>
 
   <%= f.label :country %>
-  <%= f.text_field :country %>
+  <%= f.text_field :country %></br>
 
-  <%= f.submit %>
+  <%= f.submit "Create Manufacturer"%>
 <% end %>
