--- a/app/views/manufacturers/new.html.erb
+++ b/app/views/manufacturers/new.html.erb
@@ -1,3 +1,12 @@
+<% if @manufacturer.errors.any? %>
+  <ul><% @manufacturer.errors.full_messages.each do |error_msg| %>
+    <li>
+      <%= error_msg %>
+    </li>
+  <% end %></ul>
+<% end %>
+
+<h1>Create a New Manufacturer</h1></br>
 <%= form_for @manufacturer do |f| %>
   <%= f.label :name %>
   <%= f.text_field :name %></br>
