--- a/app/views/manufacturers/index.html.erb
+++ b/app/views/manufacturers/index.html.erb
@@ -1,3 +1,9 @@
-<% @manufacturers.each do |manufacturer| %>
-  <%= manufacturer.name %>
-<% end %>
+<h1>Car Manufacturers</h1>
+<%= link_to 'Add A New Manufacturer', new_manufacturer_path %>
+<%= link_to 'Add A New Car' %><br>
+
+<ul>
+  <% @manufacturers.each do |manufacturer| %>
+    <li><%= link_to manufacturer.name, manufacturer_path(manufacturer) %>: <%= manufacturer.country %></li>
+  <% end %>
+</ul>
